--- a/index.html
+++ b/index.html
@@ -65,12 +65,12 @@ comments: false
       <div class="btn-group">
         {% if paginator.previous_page %}
           {% if paginator.previous_page == 1 %}
-              <a href="{{ site.url }}/" class="btn btn-outline">&laquo;</a>
+              <a href="{{ site.url }}/" class="btn btn-outline">&lt;</a>
           {% else %}
-              <a href="{{ site.url }}/page{{paginator.previous_page}}"  class="btn btn-outline">&laquo;</a>
+              <a href="{{ site.url }}/page{{paginator.previous_page}}"  class="btn btn-outline">&lt;</a>
           {% endif %}
         {% else %}
-            <button disabled="disabled" href="javascript:;" class="btn btn-outline">&laquo;</button>
+            <button disabled="disabled" href="javascript:;" class="btn btn-outline">&lt;</button>
         {% endif %}
         {% if paginator.page == 1 %}
             <a href="javascript:;" class="active btn btn-outline">1</a>
@@ -85,9 +85,9 @@ comments: false
           {% endif %}
         {% endfor %}
         {% if paginator.next_page %}
-            <a href="{{ site.url }}/page{{paginator.next_page}}"  class="btn btn-outline">&raquo;</a>
+            <a href="{{ site.url }}/page{{paginator.next_page}}"  class="btn btn-outline">&gt;</a>
         {% else %}
-            <button disabled="disabled" href="javascript:;" class="btn btn-outline">&raquo;</button>
+            <button disabled="disabled" href="javascript:;" class="btn btn-outline">&gt;</button>
         {% endif %}
         </div>
     </div>
