add redirection script

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@ css: ['pages/index.css']
 comments: false
 ---
 
+<!-- redirection to new site -->
+<script>window.location.href='https://sunbufu.vercel.app/';</script>
+
 <section class="banner">
     <div class="collection-head">
         <div class="container">
